# data-prep-kit

./: .make.defaults  .make.versions  .pre-commit-config.yaml  .secrets.baseline  ADVANCED.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  README.md  RELEASE.md  index.html  mkdocs.yml  release-notes.md  resources.md
transforms/: .gitignore  .make.cicd.targets  .make.transforms  .make.workflows  Dockerfile.python.template  Dockerfile.ray.template  Dockerfile.spark.template  Makefile  Makefile.kfp.template  README-list.md  README.md.template  ededup-wikimedia.ipynb  index.html  pyproject.toml  requirements-ray.txt  requirements.txt  transforms-1.0-lang-Windows.ipynb  transforms-1.0-lang-ray-Windows.ipynb  transforms-1.0-lang-ray.ipynb  transforms-1.0-lang.ipynb  transforms-dev1-testing.ipynb  wikimedia-unique-document-hash.ipynb  wikimedia-unique-hash.ipynb
transforms/add_new_kfp_workflow/: index.html
transforms/chain/: Makefile  transform_chain.ipynb
transforms/chain/dpk_transform_chain/: README.md  parallel_python_chain.py  python_chain.py
transforms/chain/test/: README.md  test_transform_chain.py
transforms/code/code2parquet/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  code2parquet-ray.ipynb  code2parquet.ipynb
transforms/code/code_profiler/: Dockerfile.python  Dockerfile.ray  index.html  requirements.txt
transforms/code/code_quality/: Makefile  README.md  code_quality-ray.ipynb  code_quality.ipynb  requirements.txt
transforms/code/code_quality_refactor/: Makefile  README.md  requirements.txt
transforms/code/comment_cleanser/: Dockerfile.python  Dockerfile.ray  README.md  comment_cleanser.ipynb  requirements.txt  transform.config
transforms/code/doc_cleaner/: Makefile
transforms/code/header_cleanser/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  header_cleanser.ipynb  requirements.txt
transforms/code/license_select/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  license_select-ray.ipynb  license_select.ipynb
transforms/code/malware/: Dockerfile.python  Dockerfile.ray  Makefile  README.md
transforms/code/proglang_select/: Dockerfile.ray  README.md  proglang-select-ray.ipynb  proglang-select.ipynb
transforms/code/repo_level_order/: Dockerfile.ray  README.md  repo_level_order-ray.ipynb  requirements.txt
transforms/code/yara/: .gitignore  Dockerfile.python  Dockerfile.ray  Makefile  README.md  requirements.txt  yara-pipeline-demo.ipynb  yara-ray.ipynb  yara.ipynb
transforms/images/: README.md
transforms/images/faces/: Dockerfile.python  Dockerfile.ray  Faces.ipynb  Makefile  requirements.txt
transforms/images/nsfw/: Dockerfile.python  Dockerfile.ray  Makefile  nsfw.ipynb
transforms/images/people/: Dockerfile.python  Dockerfile.ray  Makefile  Peoples.ipynb
transforms/language/doc_chunk/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  doc_chunk-python.ipynb  doc_chunk-ray.ipynb  index.html  requirements.txt
transforms/language/doc_quality/: Dockerfile.python  Dockerfile.ray  doc_quality-ray.ipynb  doc_quality.ipynb  index.html
transforms/language/docling2parquet/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  docling2parquet-python.ipynb  docling2parquet-pythonjob.yaml  docling2parquet-ray.ipynb  docling2parquet-rayjob.yaml  granite-docling2parquet-python.ipynb  requirements.txt
transforms/language/enrichment/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  enrichment-rayjob.yaml  enrichment.ipynb  requirements.txt
transforms/language/extreme_tokenized/: Makefile  extreme_tokenized_python.ipynb  extreme_tokenized_ray.ipynb  index.html
transforms/language/gneissweb_classification/: Dockerfile.python  Dockerfile.ray  Makefile  gneissweb_classification-pipeline.yaml  gneissweb_classification-ray.ipynb  gneissweb_classification-rayjob.yaml  gneissweb_classification-task.yaml  gneissweb_classification.ipynb  index.html  requirements.txt
transforms/language/html2parquet/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  html2parquet.ipynb  index.html  requirements.txt
transforms/language/lang_id/: Dockerfile.python  Dockerfile.ray  README.md  index.html  lang_id-ray.ipynb  lang_id.ipynb  langid-rayjob.yaml  requirements.txt
transforms/language/ml_filter/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  cleansing-config.yaml  ml_filter.ipynb
transforms/language/pdf2parquet/: README.md  index.html  requirements.txt
transforms/language/pii_redactor/: Dockerfile.python  Dockerfile.ray  Makefile  piiredactor-ray.ipynb  piiredactor.ipynb  requirements.txt
transforms/language/readability/: Dockerfile.python  Dockerfile.ray  Makefile  index.html  readability_python.ipynb  readability_ray.ipynb  requirements.txt
transforms/language/similarity/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  index.html  similarity.ipynb
transforms/language/text_encoder/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  index.html  lance-commit-rayjob.yaml  pipeline-text-encoder-lance-commit.yaml  requirements.txt  run-text-encoder-lance-commit.yaml  task-lance-commit.yaml  task-repo.yaml  task-text-encoder.yaml  text-encoder-rayjob.yaml  text_encoder-python.ipynb  text_encoder-ray.ipynb
transforms/multimodal/: Dockerfile.ray  Faces.ipynb  Makefile  Peoples.ipynb  README.md  nsfw.ipynb  requirements-private.txt  requirements.txt
transforms/multimodal/dpk_mm/: abstract_detector.py  abstract_transform.py  util.py
transforms/multimodal/kfp_ray/: nsfw_wf.py  people_wf.py
transforms/universal/blocklist/: Dockerfile.python  Makefile  README.md  blocklist-ray.ipynb  blocklist.ipynb  requirements.txt
transforms/universal/bloom/: bloom_python.ipynb  bloom_python_HuggingFace.ipynb  index.html  requirements.txt
transforms/universal/c4_annotator/: Makefile  README.md  requirements.txt
transforms/universal/collapse/: Makefile  README.md  collapse-rayjob.yaml  collapse.ipynb  collapse_ray.ipynb  freeze.lst
transforms/universal/doc_id/: Dockerfile.python  Dockerfile.spark  Makefile  README.md  (+6 more)
transforms/utils/: model_loader.py  model_loader_registry.py
(+1428 files in other folders)
