[project]
name = "data_prep_toolkit_idiud"
version = "1.1.0"
requires-python = ">=3.10,<3.13"
keywords = ["transforms", "data preprocessing", "data preparation", "llm", "generative", "ai", "fine-tuning", "llmapps" ]
description = "Subset of Data Preparation Toolkit Transforms"
license = {text = "Apache-2.0"}
readme = {file = "README-list.md", content-type = "text/markdown"}
authors = [
    { name = "Maroun Touma", email = "touma@us.ibm.com" },
]
dynamic = ["dependencies","optional-dependencies"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"



[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"]}
all = { file = [
"language/doc_quality/requirements.txt",
"universal/doc_id/requirements.txt",
"universal/ededup/requirements.txt",
"universal/filter/requirements.txt",
"universal/resize/requirements.txt",
"language/lang_id/requirements.txt",
"language/extreme_tokenized/requirements.txt",
"language/readability/requirements.txt",
"universal/rep_removal/requirements.txt",
]}

doc_quality = { file = ["language/doc_quality/requirements.txt"]}
doc_id = { file = ["universal/doc_id/requirements.txt"]}
ededup = { file = ["universal/ededup/requirements.txt"]} 
filter = { file = ["universal/filter/requirements.txt"]}
resize = { file = ["universal/resize/requirements.txt"]} 
lang_id = { file = ["language/lang_id/requirements.txt"]}
extreme_tokenized = { file = ["language/extreme_tokenized/requirements.txt"]}
readability = { file = ["language/readability/requirements.txt"]}
rep_removal = { file = ["universal/rep_removal/requirements.txt"]}


[tool.setuptools.package-dir]
dpk_doc_quality = "language/doc_quality/dpk_doc_quality"
dpk_doc_id = "universal/doc_id/dpk_doc_id"
dpk_ededup = "universal/ededup/dpk_ededup"
dpk_filter = "universal/filter/dpk_filter"
dpk_resize = "universal/resize/dpk_resize"
dpk_lang_id = "language/lang_id/dpk_lang_id"
dpk_extreme_tokenized = "language/extreme_tokenized/dpk_extreme_tokenized"
dpk_readability = "language/readability/dpk_readability"
dpk_rep_removal = "universal/rep_removal/dpk_rep_removal"

[tool.setuptools.package-data]
"dpk_rep_removal.rust" = ["**"]
"dpk_rep_removal.gpt2" = ["**"]








