[project]
name = "data_prep_toolkit_transforms"
version = "1.1.5.dev1"
requires-python = ">=3.10,<3.13"
keywords = ["transforms", "data preprocessing", "data preparation", "llm", "generative", "ai", "fine-tuning", "llmapps" ]
description = "Data Preparation Toolkit Transforms using Ray"
license = {text = "Apache-2.0"}
readme = {file = "README-list.md", content-type = "text/markdown"}
authors = [
    { name = "Maroun Touma", email = "touma@us.ibm.com" },
]
dynamic = ["dependencies","optional-dependencies"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel","setuptools_scm[toml]>=7.1.0,<=8.3.0"]
build-backend = "setuptools.build_meta"



[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"]}
ray = { file = ["requirements-ray.txt"]}
all = { file = [
"workflow/requirements.txt",

"code/proglang_select/requirements.txt",
"code/header_cleanser/requirements.txt",
"code/license_select/requirements.txt",
"code/code_quality/requirements.txt",
"code/code2parquet/requirements.txt",
"code/code_profiler/requirements.txt",
"code/malware/requirements.txt",
"code/repo_level_order/requirements.txt",

"language/pii_redactor/requirements.txt",
"language/lang_id/requirements.txt",
"language/doc_quality/requirements.txt",
"language/docling2parquet/requirements.txt",
"language/doc_chunk/requirements.txt",
"language/text_encoder/requirements.txt",
"language/similarity/requirements.txt",
"language/extreme_tokenized/requirements.txt",
"language/readability/requirements.txt",
"language/gneissweb_classification/requirements.txt",
"language/ml_filter/requirements.txt",
"language/enrichment/requirements.txt",


##### Cannot have html2parquet until we solve
## docling-ibm-models 1.1.7 depends on lxml<5.0.0 and >=4.9.1
## trafilatura 1.12.0 depends on lxml>=5.2.2; platform_system != "Darwin" or python_version > "3.8"
## "language/html2parquet/requirements.txt",

"universal/profiler/requirements.txt",
"universal/resize/requirements.txt",
"universal/filter/requirements.txt",
"universal/doc_id/requirements.txt",
"universal/ededup/requirements.txt",
"universal/fdedup/requirements.txt",
"universal/hap/requirements.txt",
"universal/bloom/requirements.txt",
"universal/tokenization/requirements.txt",
"universal/web2parquet/requirements.txt",
"universal/rep_removal/requirements.txt",
"universal/tokenization2arrow/requirements.txt",
"universal/collapse/requirements.txt",
"universal/blocklist/requirements.txt",
"universal/fineweb_quality_annotator/requirements.txt",
"universal/gopher_repetition_annotator/requirements.txt"
]}

language = { file = [
"language/pii_redactor/requirements.txt",

"language/lang_id/requirements.txt",
"language/doc_quality/requirements.txt",
"language/docling2parquet/requirements.txt",
"language/doc_chunk/requirements.txt",
"language/text_encoder/requirements.txt",
"language/similarity/requirements.txt",
"language/extreme_tokenized/requirements.txt",
"language/readability/requirements.txt",
"language/gneissweb_classification/requirements.txt",
"language/ml_filter/requirements.txt",
"language/enrichment/requirements.txt",


##### Cannot have html2parquet until we solve
## docling-ibm-models 1.1.7 depends on lxml<5.0.0 and >=4.9.1
## trafilatura 1.12.0 depends on lxml>=5.2.2; platform_system != "Darwin" or python_version > "3.8"
## "language/html2parquet/requirements.txt",

"universal/filter/requirements.txt",
"universal/doc_id/requirements.txt",
"universal/ededup/requirements.txt",
"universal/fdedup/requirements.txt",
"universal/hap/requirements.txt",
"universal/bloom/requirements.txt",
"universal/tokenization/requirements.txt",
"universal/web2parquet/requirements.txt",
"universal/profiler/requirements.txt",
"universal/resize/requirements.txt",
"universal/rep_removal/requirements.txt",
"universal/tokenization2arrow/requirements.txt",
"universal/collapse/requirements.txt",
"universal/blocklist/requirements.txt"
]}

code = { file = [
"code/proglang_select/requirements.txt",
"code/header_cleanser/requirements.txt",
"code/license_select/requirements.txt",
"code/code_quality/requirements.txt",
"code/code2parquet/requirements.txt",
"code/code_profiler/requirements.txt",
"code/malware/requirements.txt",
"code/repo_level_order/requirements.txt",

"universal/filter/requirements.txt",
"universal/doc_id/requirements.txt",
"universal/ededup/requirements.txt",
"universal/fdedup/requirements.txt",
"universal/hap/requirements.txt",
"universal/bloom/requirements.txt",
"universal/tokenization/requirements.txt",
"universal/web2parquet/requirements.txt",
"universal/profiler/requirements.txt",
"universal/resize/requirements.txt",
"universal/rep_removal/requirements.txt",
"universal/tokenization2arrow/requirements.txt",
"universal/collapse/requirements.txt",
"universal/blocklist/requirements.txt",
"universal/fineweb_quality_annotator/requirements.txt",
"universal/gopher_repetition_annotator/requirements.txt"

]}

gneissweb = { file = [
"language/extreme_tokenized/requirements.txt",
"language/readability/requirements.txt",
"language/gneissweb_classification/requirements.txt",
"universal/filter/requirements.txt",
"universal/tokenization/requirements.txt",
"universal/resize/requirements.txt",
"universal/rep_removal/requirements.txt",
"universal/bloom/requirements.txt",
"universal/tokenization2arrow/requirements.txt"
]}

# pyproject.toml must be in a parent and cannot be in sibling
# i.e. Cannot access '../code/proglang_select/python/..

proglang_select = { file = ["code/proglang_select/requirements.txt"]}
header_cleanser = {file =  ["code/header_cleanser/requirements.txt"]}
license_select = { file = ["code/license_select/requirements.txt"]}
code_quality = { file = ["code/code_quality/requirements.txt"]}
code2parquet = {file =  ["code/code2parquet/requirements.txt"]}
malware = {file =  ["code/code2parquet/requirements.txt"]}
code_profiler = { file = ["code/code_profiler/requirements.txt"]}
repo_level_order = { file= ["code/repo_level_order/requirements.txt"]}

profiler = { file = ["universal/profiler/requirements.txt"]}
resize = { file = ["universal/resize/requirements.txt"]}
doc_chunk = { file = ["language/doc_chunk/requirements.txt"]}
doc_quality = { file = ["language/doc_quality/requirements.txt"]}
html2parquet = { file = ["language/html2parquet/requirements.txt"]}
lang_id = { file = ["language/lang_id/requirements.txt"]}
docling2parquet = { file = ["language/docling2parquet/requirements.txt"]}
text_encoder = { file = ["language/text_encoder/requirements.txt"]}
pii_redactor = { file = ["language/pii_redactor/requirements.txt"]}
similarity = { file = ["language/similarity/requirements.txt"]}
extreme_tokenized = { file = ["language/extreme_tokenized/requirements.txt"]}
readability = { file = ["language/readability/requirements.txt"]}
gneissweb_classification = { file = ["language/gneissweb_classification/requirements.txt"]}
ml_filter = { file = ["language/ml_filter/requirements.txt"]}
enrichment = { file = ["language/enrichment/requirements.txt"]}
filter = { file = ["universal/filter/requirements.txt"]}
doc_id = { file = ["universal/doc_id/requirements.txt"]}
hap = { file = ["universal/hap/requirements.txt"]}
bloom = { file = ["universal/bloom/requirements.txt"]}
ededup = { file = ["universal/ededup/requirements.txt"]}
fdedup = { file = ["universal/fdedup/requirements.txt"]}
tokenization = { file = ["universal/tokenization/requirements.txt"]}
web2parquet = { file = ["universal/web2parquet/requirements.txt"]}
rep_removal = { file = ["universal/rep_removal/requirements.txt"]}
tokenization2arrow = { file = ["universal/tokenization2arrow/requirements.txt"]}
collapse = { file = ["universal/collapse/requirements.txt"]}
blocklist = { file = ["universal/blocklist/requirements.txt"]}
gopher_repetition_annotator = { file = ["universal/gopher_repetition_annotator/requirements.txt"]}
fineweb_quality_annotator = { file = ["universal/fineweb_quality_annotator/requirements.txt"]}


[tool.setuptools.package-dir]
dpk_web2parquet = "universal/web2parquet/dpk_web2parquet"
dpk_doc_chunk = "language/doc_chunk/dpk_doc_chunk"
dpk_doc_quality = "language/doc_quality/dpk_doc_quality"
dpk_html2parquet = "language/html2parquet/dpk_html2parquet"
dpk_lang_id = "language/lang_id/dpk_lang_id"
dpk_docling2parquet = "language/docling2parquet/dpk_docling2parquet"
dpk_text_encoder = "language/text_encoder/dpk_text_encoder"
dpk_pii_redactor = "language/pii_redactor/dpk_pii_redactor"
dpk_ml_filter = "language/ml_filter/dpk_ml_filter"
dpk_enrichment = "language/enrichment/dpk_enrichment"
dpk_doc_id = "universal/doc_id/dpk_doc_id"
dpk_hap = "universal/hap/dpk_hap"
dpk_bloom = "universal/bloom/dpk_bloom"
dpk_ededup = "universal/ededup/dpk_ededup"
dpk_fdedup = "universal/fdedup/dpk_fdedup"
dpk_tokenization = "universal/tokenization/dpk_tokenization"
dpk_similarity = "language/similarity/dpk_similarity"
dpk_filter = "universal/filter/dpk_filter"
dpk_extreme_tokenized = "language/extreme_tokenized/dpk_extreme_tokenized"
dpk_readability = "language/readability/dpk_readability"
dpk_profiler = "universal/profiler/dpk_profiler"
dpk_resize = "universal/resize/dpk_resize"
dpk_collapse = "universal/collapse/dpk_collapse"
dpk_blocklist = "universal/blocklist/dpk_blocklist"
dpk_fineweb_quality_annotator = "universal/fineweb_quality_annotator/dpk_fineweb_quality_annotator"
dpk_gopher_repetition_annotator = "universal/gopher_repetition_annotator/dpk_gopher_repetition_annotator"
dpk_gneissweb_classification = "language/gneissweb_classification/dpk_gneissweb_classification"
dpk_rep_removal = "universal/rep_removal/dpk_rep_removal"
dpk_tokenization2arrow = "universal/tokenization2arrow/dpk_tokenization2arrow"
dpk_code_profiler = "code/code_profiler/dpk_code_profiler"
dpk_proglang_select = "code/proglang_select/dpk_proglang_select"
dpk_header_cleanser = "code/header_cleanser/dpk_header_cleanser"
dpk_license_select = "code/license_select/dpk_license_select"
dpk_code_quality = "code/code_quality/dpk_code_quality"
dpk_code2parquet = "code/code2parquet/dpk_code2parquet"
dpk_malware = "code/malware/dpk_malware"
dpk_repo_level_order = "code/repo_level_order/dpk_repo_level_order"
dpk_transform_chain = "chain/dpk_transform_chain"

[tool.setuptools.package-data]
#"*" = ["*.txt"]
"dpk_rep_removal.rust" = ["**"]
"dpk_rep_removal.gpt2" = ["**"]

[options]
package_dir = ["src","test"]

[options.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Currently we use low coverage since we have to run tests separately (see makefile)
#addopts = "--cov --cov-report term-missing --cov-fail-under 25"
markers = ["unit: unit tests", "integration: integration tests"]







